# kmime

./: .git-blame-ignore-revs  .gitattributes  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  AUTHORS  CMakeLists.txt  KF5MimeConfig.cmake.in  KF6MimeConfig.cmake.in  KPimMimeConfig.cmake.in  README.md  TODO  kmime.categories  metainfo.yaml
autotests/: CMakeLists.txt  attachmenttest.cpp  attachmenttest.h  charfreqtest.cpp  charfreqtest.h  contentindextest.cpp  contentindextest.h  contenttest.cpp  contenttest.h  dateformattertest.cpp  eaitest.cpp  eaitest.h  headerfactorytest.cpp  headerfactorytest.h  headertest.cpp  headertest.h  messageparserbenchmark.cpp  messagetest.cpp  messagetest.h  parsedatetimetest.cpp  parsedatetimetest.h  rfc2047test.cpp  rfc2047test.h  rfc2231test.cpp  rfc2231test.h  sizetest.cpp  typestest.cpp  utiltest.cpp  utiltest.h
autotests/data/: big-allocation.mbox  bug392239.mbox  bug519598-attachment.mbox  bug519598-encapsulated-message.mbox  bug519599.mbox  clusterfuzz-testcase-minimized-kmime_fuzzer-4804196479336448  clusterfuzz-testcase-minimized-kmime_fuzzer-5255984894509056  clusterfuzz-testcase-minimized-kmime_fuzzer-5617955779182592  clusterfuzz-testcase-minimized-kmime_fuzzer-6349101081100288  crash-invalid-email-reply.mbox  eai-addresses.mbox  eai-attachment.mbox  eai-not-emoji.mbox  eai-punycode.mbox  headers-with-nullbytes.mbox  multipart-parse-abort-2.mbox  multipart-parse-abort.mbox  read-digits-overflow.mbox  uninitialized-memory-use.mbox  uuencode-simple.mbox  yenc-mail-part.txt  yenc-single-part-corrupt-size.yenc
autotests/data/mails/: kmail-attachmentstatus.mbox  plain-text-body.mbox  reply-header.mbox
autotests/ossfuzz/: CMakeLists.txt  README.md  build_fuzzers.sh  kmime_fuzzer.cc  kmime_fuzzer.dict  prepare_build.sh
cmake/: ConfigureChecks.cmake
compat/: CMakeLists.txt  KPim6MimeConfig.cmake.in
includes/: CMakeLists.txt  Types
po/ar/: libkmime5.po  libkmime6.po
po/ast/: libkmime5.po
po/be/: libkmime5.po  libkmime6.po
po/bg/: libkmime5.po  libkmime6.po
po/br/: libkmime5.po  libkmime6.po
po/bs/: libkmime5.po  libkmime6.po
po/ca/: libkmime5.po  libkmime6.po
po/ca@valencia/: libkmime5.po  libkmime6.po
po/cs/: libkmime5.po  libkmime6.po
po/cy/: libkmime5.po
po/da/: libkmime5.po  libkmime6.po
po/de/: libkmime5.po
po/el/: libkmime5.po  libkmime6.po
po/en_GB/: libkmime5.po
po/eo/: libkmime5.po  libkmime6.po
po/es/: libkmime5.po  libkmime6.po
po/et/: libkmime5.po
po/eu/: libkmime5.po  libkmime6.po
po/fa/: libkmime5.po
po/fi/: libkmime5.po  libkmime6.po
po/fr/: libkmime5.po  libkmime6.po
po/fy/: libkmime5.po
po/ga/: libkmime5.po  libkmime6.po
po/gl/: libkmime5.po
po/he/: libkmime6.po
po/hi/: libkmime5.po
po/hne/: libkmime5.po  libkmime6.po
po/hu/: libkmime5.po  libkmime6.po
po/ia/: libkmime5.po  libkmime6.po
po/it/: libkmime5.po  libkmime6.po
po/ja/: libkmime5.po
po/ka/: libkmime5.po  libkmime6.po
po/kk/: libkmime5.po  libkmime6.po
po/km/: libkmime5.po
po/ko/: libkmime5.po
po/lt/: libkmime5.po  libkmime6.po
po/lv/: libkmime5.po
po/mk/: libkmime5.po  libkmime6.po
po/mr/: libkmime5.po  libkmime6.po
po/ms/: libkmime5.po  libkmime6.po
po/nb/: libkmime5.po  libkmime6.po
po/nds/: libkmime5.po  libkmime6.po
po/ne/: libkmime5.po  libkmime6.po
po/nl/: libkmime5.po
po/nn/: libkmime5.po  libkmime6.po
po/pa/: libkmime5.po
po/pl/: libkmime5.po  libkmime6.po
po/pt/: libkmime5.po  libkmime6.po
po/pt_BR/: libkmime5.po
po/ro/: libkmime5.po  libkmime6.po
po/ru/: libkmime5.po
po/sa/: libkmime5.po  libkmime6.po
po/se/: libkmime5.po  libkmime6.po
po/sk/: libkmime5.po  libkmime6.po
po/sl/: libkmime5.po
po/sq/: libkmime5.po
po/sr/: libkmime5.po  libkmime6.po
po/sr@ijekavian/: libkmime5.po  libkmime6.po
po/sr@ijekavianlatin/: libkmime5.po  libkmime6.po
po/sr@latin/: libkmime5.po
po/sv/: libkmime5.po  libkmime6.po
po/ta/: libkmime5.po  libkmime6.po
po/th/: libkmime5.po  libkmime6.po
po/tr/: libkmime5.po  libkmime6.po
po/ug/: libkmime5.po
po/uk/: libkmime5.po
po/uz/: libkmime5.po  libkmime6.po
po/uz@cyrillic/: libkmime5.po  libkmime6.po
po/wa/: libkmime5.po  libkmime6.po
po/zh_CN/: libkmime5.po  libkmime6.po
po/zh_TW/: libkmime5.po
poqm/ar/: libkmime6_qt.po
poqm/ast/: libkmime6_qt.po
poqm/be/: libkmime6_qt.po
poqm/bg/: libkmime6_qt.po
poqm/br/: libkmime6_qt.po
poqm/bs/: libkmime6_qt.po
poqm/ca/: libkmime6_qt.po
poqm/ca@valencia/: libkmime6_qt.po
poqm/cs/: libkmime6_qt.po
poqm/cy/: libkmime6_qt.po
poqm/da/: libkmime6_qt.po
poqm/de/: libkmime6_qt.po
poqm/el/: libkmime6_qt.po
poqm/en_GB/: libkmime6_qt.po
poqm/eo/: libkmime6_qt.po
poqm/es/: libkmime6_qt.po
poqm/et/: libkmime6_qt.po
poqm/eu/: libkmime6_qt.po
poqm/fa/: libkmime6_qt.po
poqm/fi/: libkmime6_qt.po
poqm/fr/: libkmime6_qt.po
poqm/fy/: libkmime6_qt.po
poqm/ga/: libkmime6_qt.po
poqm/gl/: libkmime6_qt.po
poqm/he/: libkmime6_qt.po
poqm/hi/: libkmime6_qt.po
poqm/hne/: libkmime6_qt.po
poqm/hu/: libkmime6_qt.po
poqm/ia/: libkmime6_qt.po
poqm/is/: libkmime6_qt.po
poqm/it/: libkmime6_qt.po
poqm/ja/: libkmime6_qt.po
poqm/ka/: libkmime6_qt.po
poqm/kk/: libkmime6_qt.po
poqm/km/: libkmime6_qt.po
src/: CMakeLists.txt  Messages.sh  charfreq.cpp  charfreq_p.h  codecs.cpp  codecs_p.h  config-kmime.h.cmake  config-kmime.h.in  content.cpp  content.h  content_p.h  contentindex.cpp  contentindex.h  headerfactory.cpp  headerfactory_p.h  headerparsing.cpp  headerparsing.h  headerparsing_p.h  headers.cpp  headers.h  headers_p.h  kmime-index.qdoc  kmime.qdoc  kmime.qdocconf  kmime_charfreq.cpp  kmime_charfreq.h  kmime_charfreq_p.h  kmime_codecs.cpp  kmime_codecs.h  kmime_content.cpp  kmime_content.h  kmime_content_p.h  kmime_contentindex.cpp  kmime_contentindex.h  kmime_dateformatter.cpp  kmime_dateformatter.h  kmime_header_parsing.cpp  kmime_header_parsing.h  kmime_header_parsing_p.h  kmime_headerfactory.cpp  (+36 more)
tests/: CMakeLists.txt  test_charfreq.cpp  test_dates.cpp  test_kmime_header_parsing.cpp  test_mdn.cpp
(+37 files in other folders)
